[package]
name = "ldk-node-liquidity-poc-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldk-node = "0.3.0"
tokio = "1"
client = { git = "https://github.com/tnull/ldk-node-hack-server.git", branch = "main" }
protos = { git = "https://github.com/tnull/ldk-node-hack-server.git", branch = "main" }
